Edit Mesh: Fixes display of custom normals

Should fix T57620